add italic font styling and test out bold

--- a/css/v202209/symbiota/base.css
+++ b/css/v202209/symbiota/base.css
@@ -496,3 +496,11 @@ button {
   border-color: buttonborder;
   border-image: initial;
 }
+
+i {
+  font-style: italic;
+}
+
+b {
+  font-weight: bold;
+}
