--- a/css/v202209/symbiota/header.css
+++ b/css/v202209/symbiota/header.css
@@ -21,12 +21,11 @@ header {
 
 .top-login {
   padding-bottom: 20px;
-  display: grid;
-  place-items: center;
 }
 
 .top-login > .button {
   margin-left: 0.8rem;
+  display: inline-block;
 }
 
 .top-brand {
