added disabled styling to primary, secondary, and danger buttons

--- a/css/v202209/symbiota/main.css
+++ b/css/v202209/symbiota/main.css
@@ -238,10 +238,18 @@ hr {
 }
 
 .button-primary:hover,
-.button-secondary:hover 
+.button-secondary:hover,
 .button-danger:hover 
 {
   background-color: var(--medium-color);
+}
+
+.button-primary:disabled,
+.button-secondary:disabled,
+.button-danger:disabled
+{
+	opacity: 50%;
+	pointer-events: none;
 }
 
 .button-primary:hover > a,
