swap fonts to 1rem so it always matches html font size, 1rem = font-size of html

--- a/css/base.css
+++ b/css/base.css
@@ -75,7 +75,7 @@ span[class="link"]:hover {
 /*  navpath styles */
 .navpath {
   color: #000000;
-  font-size: 12px;
+  font-size: 1rem;
 }
 
 .navpath a {
@@ -105,7 +105,7 @@ span[class="link"]:hover {
 }
 
 .collectiontitle {
-  font-size: 12px;
+  font-size: 1rem;
   margin-top: 8px;
 }
 
