--- a/css/symb/main.css
+++ b/css/symb/main.css
@@ -7,7 +7,7 @@ body {
   margin-top: 0px;
   font-family: Verdana, Geneva, sans-serif;
   background-color: #e9e9e9;
-  font-size: 12px;
+  font-size: 1rem;
 }
 
 /*Main table framework*/
@@ -116,7 +116,7 @@ table.styledtable tr.alt td {
 }
 #right_navbarlinks {
   clear: both;
-  font-size: 11px;
+  font-size: 1rem;
   float: right;
   color: #000000;
   margin-top: 9px;
@@ -126,7 +126,7 @@ table.styledtable tr.alt td {
   list-style: none;
   float: left;
   position: relative;
-  font-size: 12px;
+  font-size: 1rem;
   width: auto;
   height: 31px;
   margin-top: 0px;
