--- a/css/v202209/symbiota/header.css
+++ b/css/v202209/symbiota/header.css
@@ -21,11 +21,12 @@ header {
 
 .top-login {
   padding-bottom: 20px;
+  padding-right: 1rem;
 }
 
 .top-login > .button {
-  margin-left: 0.8rem;
-  display: inline-block;
+  margin-left: 0.4rem;
+  margin-right: 0.4rem;
 }
 
 .top-brand {
