--- a/css/v202209/symbiota/header.css
+++ b/css/v202209/symbiota/header.css
@@ -92,6 +92,7 @@ header a:hover {
   z-index: 1;
   background-color: var(--menu-top-bg-color);
   min-width: 0;
+  text-align: center;
 }
 
 .top-menu {
@@ -99,7 +100,7 @@ header a:hover {
   height: 100%;
   max-height: 0;
   transition: max-height 0.5s ease-out;
-  position: fixed;
+  /* position: fixed; */
   left: 0;
   background-color: var(--menu-top-bg-color);
   overflow: hidden;
@@ -120,7 +121,7 @@ header a:hover {
 }
 
 .hamb-label {
-  display: block;
+  display: inline;
   height: 2px;
   position: relative;
   width: 24px;
@@ -237,7 +238,6 @@ ul.menu {
     min-width: 0;
     width: 100%;
     margin: 0 auto;
-    text-align: center;
   }
 
   .hamb {
