--- a/css/v202209/symbiota/header.css
+++ b/css/v202209/symbiota/header.css
@@ -99,7 +99,7 @@ header a:hover {
   width: 100%;
   height: 100%;
   max-height: 0;
-  transition: max-height 0.5s ease-out;
+  /*transition: max-height 0.5s ease-out; */
   /* position: fixed; */
   left: 0;
   background-color: var(--menu-top-bg-color);
@@ -134,7 +134,7 @@ header a:hover {
   display: block;
   height: 100%;
   position: absolute;
-  transition: all 0.2s ease-out;
+  /* transition: all 0.2s ease-out; */
   width: 100%;
 }
 
