--- a/css/v202209/symbiota/base.css
+++ b/css/v202209/symbiota/base.css
@@ -100,12 +100,7 @@ span[class="link"]:hover {
 }
 
 #cloptiondiv {
-  margin: 5px;
-  width: 250px;
-  text-align: left;
-  float: right;
-  max-width: 20% !important;
-  min-height: 325px;
+	width: fit-content;
 }
 
 #taxonfilterdiv {
