added css for danger button, removed blue background and padding

--- a/css/uswds/symbiota/base.css
+++ b/css/uswds/symbiota/base.css
@@ -488,6 +488,21 @@ b {
   font-weight: bold;
 }
 
+.button-danger {
+  background-color: var(--danger-color, var(--darkest-color));
+}
+
+.button-danger:hover 
+{
+  background-color: var(--medium-color);
+}
+
+.button-danger:disabled
+{
+	opacity: 50%;
+	pointer-events: none;
+}
+
 .gridlike-form {
   margin: 15px;
   display: flex;
