added styling for svg in icon-buttons, removed inline fill for svgs

--- a/css/v202209/symbiota/base.css
+++ b/css/v202209/symbiota/base.css
@@ -509,6 +509,10 @@ button.icon-button {
   border-color: buttonborder;
 }
 
+button.icon-button > svg {
+  fill: var(--light-color);
+}
+
 button.icon-button:hover {
   background: var(--medium-color);
 }
