--- a/css/v202209/symbiota/main.css
+++ b/css/v202209/symbiota/main.css
@@ -342,6 +342,9 @@ hr {
 .cat-icon-div {
   width: 4rem;
   height: 3rem;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 .collection-checkbox {
