add font-size-normalization on tabs ui

--- a/css/symb/main.css
+++ b/css/symb/main.css
@@ -282,3 +282,8 @@ table.styledtable tr.alt td {
 .disp-none {
   display: none;
 }
+
+/* JQUERY UI modifications */
+.ui-tabs-panel {
+  font-size: 1rem;
+}
