--- a/css/v202209/symbiota/main.css
+++ b/css/v202209/symbiota/main.css
@@ -369,6 +369,11 @@ hr {
   float: right;
 }
 
+/* JQUERY UI modifications */
+.ui-tabs-panel {
+  font-size: 1rem;
+}
+
 .ui-autocomplete {
   /* from https://stackoverflow.com/questions/32517694/jquery-autocomplete-dropdown-is-transparent */
   background-color: inherit;
