fixed the font styling

--- a/css/v202209/symbiota/main.css
+++ b/css/v202209/symbiota/main.css
@@ -385,6 +385,7 @@ button.icon-button:hover {
   display: flex;
   justify-content: center;
   align-items: center;
+  color: var(--light-color);
 }
 
 .button > a {
@@ -423,6 +424,7 @@ button.icon-button:hover {
 
 .button-primary > a {
   color: var(--light-color);
+  font-family: var(--heading-font-family);
 }
 
 .button-secondary {
