adding variable to control menu font-size for easy customization

--- a/css/v202209/symbiota/header.css
+++ b/css/v202209/symbiota/header.css
@@ -327,7 +327,8 @@ ul.menu > ul li{
   }
 
   ul.menu * {
-    vertical-align: middle;
+	vertical-align: middle;
+	font-size: var(--menu-font-size);
   }
 
   ul.menu > li {
