--- a/css/v202209/symbiota/header.css
+++ b/css/v202209/symbiota/header.css
@@ -155,6 +155,10 @@ header a:hover {
   display: none;
 }
 
+.menu {
+  font-size: var(--menu-font-size);
+}
+
 ul.menu,
 ul.menu ul {
   list-style: none;
@@ -328,7 +332,6 @@ ul.menu > ul li{
 
   ul.menu * {
 	vertical-align: middle;
-	font-size: var(--menu-font-size);
   }
 
   ul.menu > li {
