--- a/css/symbiota/variables.css
+++ b/css/symbiota/variables.css
@@ -1,16 +1,7 @@
-/**
-* * Symbiota Redesign - variables.css
-* * Version: September 2022
-* * Author: Laura Rocha Prado
-* * Author URI: http://laura.rochaprado.com
-* * License: GNU General Public License v2 or later
-* * License URI: http://www.gnu.org/licenses/gpl-2.0.html 
-*/
-
 /* Variables
    ========================================================================== */
 :root {
-  --header-bg-image: url("../../../images/layout/jonathan-borba-Ui73wdp0wok-unsplash.jpg");
+  --header-bg-image: url("../../images/layout/jonathan-borba-Ui73wdp0wok-unsplash.jpg");
   --header-bg-color: #2f6e5378; /** Transparent color if adding header bg-image **/
   --header-font-color: #fff;
   --brand-font-size: 1.5rem;
