--- a/css/v202209/symbiota/reset.css
+++ b/css/v202209/symbiota/reset.css
@@ -90,6 +90,7 @@ video {
   font-size: 100%;
   font: inherit;
   font-family: var(--body-font-family);
+  vertical-align: top;
 }
 /* HTML5 display-role reset for older browsers */
 article,
