--- a/css/symbiota/customizations.css
+++ b/css/symbiota/customizations.css
@@ -3,3 +3,7 @@ Place your CSS customizations here.
 This stylesheet is defined last and will override all previously loaded sheets. You may reference variables defined in variables.css 
  */
  
+ /* Global */
+ html {
+    font-size: 12px; /* 1rem = 10px */
+  }
