--- a/collections/editor/includes/config/occureditorcrowdsource.css
+++ b/collections/editor/includes/config/occureditorcrowdsource.css
@@ -1,17 +1,14 @@
 body{
 	font-family: Arial, Helvetica, sans-serif;
-	font-size: 12px;
 }
 
 #innertext{
 	padding:	10px;
-	font-size:	12px;
 	background-color: #ffffff;;
 }
 
 #titleDiv{
 	font-weight: bold;
-	font-size: 16px;
 	width: 595px;
 }
 
@@ -30,10 +27,13 @@ body{
 	width: 595px;
 }
 
+#innertext {
+	max-width: 90%;
+	width: fit-content;
+}
+
 #occedittabs{
 	font-family: Arial,Helvetica,sans-serif;
-	font-size: 12px;
-	height: 730px;
 }
 
 
@@ -638,5 +638,5 @@ img.editimg {
 
 table { 
 	font-family: 	Arial, Helvetica, sans-serif; 
-	font-size: 		12px;
+	/*font-size: 		12px;*/
 }
