reverting crowdsource styling to reflect 3.1 styles with reqards to the jquery styling

--- a/css/symbiota/main.css
+++ b/css/symbiota/main.css
@@ -669,6 +669,10 @@ table.styledtable tr.alt td {
 }
 
 /* JQUERY UI modifications */
+.ui-tabs-tab {
+  font-size: 1rem;
+}
+
 .ui-widget {
 	font-size: 1rem;
 }
