--- a/css/symbiota/customizations.css
+++ b/css/symbiota/customizations.css
@@ -2,4 +2,9 @@
 Place your CSS customizations here.
 This stylesheet is defined last and will override all previously loaded sheets. You may reference variables defined in variables.css 
  */
- 
+
+@import url("https://fonts.googleapis.com/css2?family=Open+Sans&display=swap");
+
+ul li {
+  margin-bottom: 0.5em;
+} 
