--- a/css/symbiota/collections/editor/occurrenceeditor.css
+++ b/css/symbiota/collections/editor/occurrenceeditor.css
@@ -891,6 +891,11 @@ img.editimg {
 	width:			15px;
 }
 
+img[id^="activeimg-"] {
+	max-width: unset;
+}
+
+
 table { 
 	font-family: 	Arial, Helvetica, sans-serif; 
 	font-size: 		12px;
