--- a/css/symbiota/collections/editor/occurrenceeditor.css
+++ b/css/symbiota/collections/editor/occurrenceeditor.css
@@ -886,6 +886,13 @@ fieldset{
 	display: flex;
 	justify-content: center;
 	align-items: center;
+	font-weight: 600;
+  }
+
+  .button-toggle {
+	font-family: var(--body-font-family);
+	font-size: 100%;
+	font-weight: 600;
   }
 
   .icon-button {
@@ -953,7 +960,7 @@ img[id^="activeimg-"] {
 }
 
 table { 
-	font-family: 	Arial, Helvetica, sans-serif; 
+	font-family: var(--body-font-family)
 }
 
 .divTable{ display: table; border: 1px solid #000000; border-collapse: collapse; margin-bottom: 2px }
