--- a/css/symbiota/collections/editor/occurrenceeditor.css
+++ b/css/symbiota/collections/editor/occurrenceeditor.css
@@ -1,5 +1,7 @@
+@import url("https://fonts.googleapis.com/css2?family=Open+Sans&display=swap");
+
 body{
-	font-family: Arial, Helvetica, sans-serif;
+	font-family: Arial,sans-serif;
 }
 
 fieldset{
@@ -959,10 +961,6 @@ img[id^="activeimg-"] {
 	max-width: unset;
 }
 
-table { 
-	font-family: var(--body-font-family)
-}
-
 .divTable{ display: table; border: 1px solid #000000; border-collapse: collapse; margin-bottom: 2px }
 .divTableRow { display: table-row; }
 .divTableHeading { display: table-header-group; background: #f2f2f2; border-bottom: 2px solid #444444; }
@@ -974,3 +972,59 @@ table {
 .imgInfo {
 	vertical-align: top;
 }
+
+ /* Record Search Form */
+
+#querydiv fieldset {
+	display: block;
+    margin-inline-start: 2px;
+    margin-inline-end: 2px;
+    padding-block-start: 0.35em;
+    padding-inline-start: 0.75em;
+    padding-inline-end: 0.75em;
+    padding-block-end: 0.625em;
+    min-inline-size: min-content;
+    border-width: 2px;
+    border-style: groove;
+    border-color: rgb(192, 192, 192);
+    border-image: initial;
+}
+
+#querydiv {
+    font-family: var(--body-font-family);
+	line-height: 1.15;
+}
+#querydiv input{
+	font-family: inherit;
+    font-size: 100%;
+    line-height: 1.15rem;
+}
+
+#querydiv button.icon-button {
+    padding: 6px;
+    border-width: 1px;
+}
+#querydiv button:hover {
+	background-color: var(--medium-color);
+	color: var(--light-color);
+}
+
+#querydiv button {
+	background-color: var(--darkest-color);
+    border: none;
+    border-radius: 5px;
+    color: #fff;
+    font-family: var(--body-font-family);
+    font-weight: 600;
+    letter-spacing: 1px;
+    cursor: pointer;
+    transition: all 0.2s ease-in-out;
+	font-size: 100%;
+	border-width: 2px;
+    border-style: outset;
+    border-color: buttonborder;
+}
+
+button.icon-button svg {
+	fill: var(--light-color);
+  }
