--- a/css/occureditor.css
+++ b/css/occureditor.css
@@ -784,7 +784,7 @@ body{
 #earlyIntervalDiv{ float:left; margin:3px; }
 #lateIntervalDiv{ float:left; margin:3px; }
 #absoluteAgeDiv{ float:left; margin:3px; }
-#storageAgeDiv{ float:left; margin:3px; }
+#storageLocDiv{ float:left; margin:3px; }
 #stageDiv{ float:left; margin:3px; }
 #localStageDiv{ float:left; margin:3px; }
 #biotaDiv{ float:left; margin:3px; }
