--- a/css/symbiota/collections/editor/occurrenceeditor.css
+++ b/css/symbiota/collections/editor/occurrenceeditor.css
@@ -838,7 +838,7 @@ fieldset{
 #earlyIntervalDiv{ float:left; margin:3px; }
 #lateIntervalDiv{ float:left; margin:3px; }
 #absoluteAgeDiv{ float:left; margin:3px; }
-#storageAgeDiv{ float:left; margin:3px; }
+#storageLocDiv{ float:left; margin:3px; }
 #stageDiv{ float:left; margin:3px; }
 #localStageDiv{ float:left; margin:3px; }
 #biotaDiv{ float:left; margin:3px; }
