added expand-collapse, added chips, changed styling

--- a/collections/search/css/searchStyles.css
+++ b/collections/search/css/searchStyles.css
@@ -627,16 +627,27 @@
 
 /* Characters and states */
 
-.inner-search .charHeadings {
-  font-size: 1.3rem;
+.inner-search .char-headings {
+  font-size: 1.4rem;
 }
 
-.inner-search .charNames {
+.inner-search .char-names {
   margin: 0.75rem;
+  font-size: 1.2rem;
 }
 
-.inner-search .charStates {
-  margin: 0.75rem;
+.inner-search .char-states {
+  margin: 1rem;
+}
+
+.inner-search .condense-expand {
+	align-items: center;
+	text-decoration: none;
+}
+
+.inner-search .icon-wrapper img {
+	margin-left: 0.25rem;
+	vertical-align: middle;
 }
 
 /* SYMBIOTA NAVIGATION */
