--- a/css/symbiota/collections/editor/editorfulldisplay.css
+++ b/css/symbiota/collections/editor/editorfulldisplay.css
@@ -783,3 +783,83 @@
 #geologicalContextIDDiv{ float:left; margin:3px; }
 #geologicalContextIDDiv input{ width:120px; }
 
+/*From old occurrenceeditor.css that were missing in this version*/
+fieldset{
+	padding: 15px;
+}
+#titleDiv{
+	font-size: 2rem;
+}
+#occdiv{
+	resize:both;
+	overflow:auto; /* something other than visible */
+}
+
+#admindiv select{
+	width: 100%;
+}
+.fieldGroupDiv input,
+.fieldGroupDiv select{
+	font-size: 100%;
+}
+#catalogNumberDiv {
+	margin-top: 5px;
+}
+#otherCatalogNumbersDiv {
+	margin-left: 10px;
+}
+.idNameInput{
+	width:	185px;
+}
+.idValueInput{
+	width:	250px;	
+}
+#geography1-div{
+	display: none;
+}
+#continentDiv{
+	float:	left;
+}
+
+#continentDiv input{
+	width:	150px;
+}
+#waterBodyDiv{
+	float:	left;
+}
+
+#waterBodyDiv input{
+	width:	150px;
+}
+
+#islandGroupDiv{
+	float:	left;
+}
+
+#islandGroupDiv input{
+	width:	150px;
+}
+
+#islandDiv{
+	float:	left;
+}
+
+#islandDiv input{
+	width:	150px;
+}
+#behaviorDiv{
+	float: left;
+}
+
+#behaviorDiv input{
+	width: 140px;
+}
+
+#vitalityDiv{
+	float: left;
+}
+
+#vitalityDiv input{
+	width: 140px;
+}
+/*End old occurrenceeditor.css*/
